Fixes slider field wrapped in BoxLayout

--- a/less/base/interactive/slider.less
+++ b/less/base/interactive/slider.less
@@ -30,7 +30,7 @@
 
 
 .photonui-slider {
-    display: flex;
+    display: flex !important;
     flex-direction: row;
     flew-wrap: nowrap;
     align-items: center;
